--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,5 +1,5 @@
 name: 缺陷反馈
-description: 反馈一个我遇到的程序使用问题
+description: 反馈一个我遇到的程序使用问题。写不清楚自己所遇到问题冲线条步骤，一律认为没问题讲直接关闭。
 title: "[缺陷]: "
 labels: ["缺陷"]
 body:
@@ -26,7 +26,7 @@ body:
     id: step
     attributes:
       label: 重现步骤
-      description: 通过什么样的操作方式，可以发生这个问题，相同操作步骤你是否还会遇到问题？
+      description: 通过什么样的操作方式，可以发生这个问题，相同操作步骤你是否还会遇到问题？这个描述，就像你去医院检查疾病，你需要告诉医生你最近做了什么，吃了什么喝了什么，反馈详细信息，医生才能快速定位问题。
       placeholder: "1. 把冰箱门打开，我看到冰箱里没什么食物（拍照）空间还很足。2. 把大象装进去（我没切碎准备直接塞进去）。大象太大，装不进去了"
     validations:
       required: true
