--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,6 @@ Flask-SQLAlchemy==2.5.1
 Flask-Cors==3.0.10
 cacheout==0.13.1
 Flask-JWT-Extended==4.3.1
-WSGIserver==1.3
-gevent==21.12.0
 pandas==1.4.1
 httpx==0.22.0
 h2==4.1.0
@@ -32,3 +30,23 @@ flasgger
 python-Levenshtein
 tenacity
 httpx[socks]
+py7zr
+rarfile
+langid
+chardet
+hanzidentifier
+ffsubsync
+pysrt
+ass
+selenium
+random_user_agent
+unrar
+magnet2torrent
+pytesseract
+Pillow
+aria2p
+pypinyin
+iso639-lang
+PyMySQL
+ffmpeg-python
+Jinja2
