--- a/app/conf/base_config.yml
+++ b/app/conf/base_config.yml
@@ -165,12 +165,8 @@ notify_channel:
         touser: ''
     message_template:
       movie_completed:
-        title: '${name} (${year}) 下载完毕'
-        message: |
-          ${nickname} 想看的 电影 ${name}(${year})下载完毕
-          [${name}](${cover})
+        title: '${name} \(${year}\) 下载完毕'
+        message: ${nickname} 想看的 电影 ${name}\(${year}\)下载完毕
       series_completed:
-        title: '${name} (${year}) 下载完毕'
-        message: |
-          ${nickname} 想看的 剧集 ${name}(${year})第${episodes}集下载完毕
-          [${name}](${cover})
+        title: '${name} \(${year}\) 下载完毕'
+        message: ${nickname} 想看的 剧集 ${name}\(${year}\)第${episodes}集下载完毕
