--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,29 @@
+tzlocal==2.1
 lxml
 numpy
-pycryptodome==3.13
-requests==2.26.0
-urllib3==1.26.7
-bencoder==0.2.0
-cn2an==0.5.16
-PyYAML==6.0
-transmission-rpc==3.3.0
-dnspython==2.2.0
-PlexAPI==4.9.1
-APScheduler==3.8.1
-jieba==0.42.1
-tzlocal==2.1
-emoji==1.6.3
-torrent-parser==0.4.0
-beautifulsoup4==4.10.0
-Flask==2.1.0
-Flask-RESTful==0.3.9
-Flask-APScheduler==1.12.3
-Flask-SQLAlchemy==2.5.1
-Flask-Cors==3.0.10
-cacheout==0.13.1
-Flask-JWT-Extended==4.3.1
-pandas==1.4.1
-httpx==0.22.0
-h2==4.1.0
-qbittorrent-api==2022.3.29
+pycryptodome
+requests
+urllib3
+bencoder
+cn2an
+PyYAML
+transmission-rpc
+dnspython
+PlexAPI
+APScheduler
+emoji
+torrent-parser
+beautifulsoup4
+Flask
+Flask-RESTful
+Flask-APScheduler
+Flask-SQLAlchemy
+Flask-Cors
+cacheout
+Flask-JWT-Extended
+pandas
+httpx
+qbittorrent-api
 flasgger
 python-Levenshtein
 tenacity
@@ -49,4 +47,6 @@ pypinyin
 iso639-lang
 PyMySQL
 ffmpeg-python
-Jinja2
+aiofiles
+voluptuous
+pyrate-limiter
